--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
-  display: block
-  background-color: rgb(255, 253, 244)
+  display: block;
+  background-color: rgb(255, 253, 244);
 }
 body {
   color: rgb(65,75,86);
