--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ html {
 }
 body {
   color: rgb(65,75,86);
-  font-family: arial;
   margin: 0;
 }
 div {
@@ -13,7 +12,7 @@ div {
 }
 h1 {
   font-size: 5em
-  font-family: 'Sniglet', cursive;
+  font-family: 'Helvetica', sans-serif;
 }
 
 h2 {font-size: 2.5em}
@@ -52,16 +51,6 @@ ul {
     list-style: none;
     display: flex;
   }
-
-div.contrast {
-    background-color: rgb(0,0,0);
-    color: rgb(255,255,255);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
 
 .bold_text {
   font-weight: bold;
