--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,22 @@ body {
   color: rgb(65,75,86);
     background-color: rgb(255, 253, 244);
 }
-div {
-    min-height: 100vh;
-    width: 100vw;
-
+div#header {
+  background-color: rgb(255, 253, 244);
+height: 60px;
+position: fixed;
+top: 0;
+width: 100%;
+z-index: 1;
 }
+
 h1 {
-  font-size: 5em
-  font-family: 'Helvetica', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+  font-style: italic;
+
 }
 
 h2 {font-size: 2.5em}
-div{
-  min-height: 100vh;
-  width: 100vh;
-  background-color: white;
-}
 
 p{
   width: 40%;
@@ -28,7 +28,15 @@ p{
   font-size: 2em;
 }
 
-
+div {
+  min-height: 100vh;
+  width: 100vw;
+}
 h1, h2 {
   text-align: center;
+}
+
+em {
+  font-size: 25px;
+  font-style: normal;
 }
